Bug 427415 - --menu, --radiolist, and --checklist show incorrect usage instructions
Summary: --menu, --radiolist, and --checklist show incorrect usage instructions
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-07 09:17 UTC by Tristan Miller
Modified: 2020-10-12 14:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2020-10-07 09:17:08 UTC
When called with the wrong number of arguments, --menu issues incorrect usage instructions:

Syntax: --menu text [tag item] [tag item] ...

Since this dialog type requires at least one tag and item, the instructions should actually be as follows:

Syntax: --menu text tag item [tag item] ...
Comment 1 Tristan Miller 2020-10-07 09:25:14 UTC
A similar problem exists with the usage instructions for --radiolist and with --checklist (which is also missing the ellipsis to indicate that last set of arguments may be repeated).
Comment 2 Harald Sitter 2020-10-12 14:04:34 UTC
Git commit 422179c34c10ba3e6ebd91b1855aaa3451c674cc by Harald Sitter, on behalf of Tristan Miller.
Committed on 12/10/2020 at 14:04.
Pushed by sitter into branch 'master'.

Fix --menu, --checklist, and --radiolist usage instructions

M  +6    -6    src/kdialog.cpp

https://invent.kde.org/utilities/kdialog/commit/422179c34c10ba3e6ebd91b1855aaa3451c674cc