Fix --menu, --checklist, and --radiolist usage instructions

BUG: 427415